<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mb_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="22dp">

        <ImageView
            android:id="@+id/mb_info_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/mb_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mb_native_info"
            android:textColor="@color/mb_gray"
            android:textStyle="bold"
            android:textSize="18sp" />

       <ImageView
           android:id="@+id/mb_info_finish_ImageView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:src="@mipmap/mb_finish"
           android:padding="10dp"
           android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/mb_gray"
            android:text="@string/mb_system_version_name_text"/>

        <TextView
            android:id="@+id/mb_system_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/mb_999999"
            android:text=""/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mb_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/mb_gray"
            android:text="@string/mb_app_version_name_text"/>

        <TextView
            android:id="@+id/mb_app_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/mb_999999"
            android:text=""/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mb_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/mb_gray"
            android:text="@string/mb_phone_type_text"/>

        <TextView
            android:id="@+id/mb_phone_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/mb_999999"
            android:text=""/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mb_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/mb_gray"
            android:text="@string/mb_phone_resolution_ratio_text"/>

        <TextView
            android:id="@+id/mb_phone_resolution_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/mb_999999"
            android:text=""/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/mb_line"/>

</LinearLayout>